# mycobot280pi-ros2-manipulation

./: .gitignore  ATTRIBUTION.md  LICENSE  README.md
docs/: pick_and_place.md  project_overview.md  setup.md  simulation.md
src/mycobot_280_gazebo/: CMakeLists.txt  package.xml
src/mycobot_280_gazebo/config/: mycobot_280_controllers.yaml  mycobot_280_controllers_0.yaml
src/mycobot_280_gazebo/launch/: gz_clock_bridge.launch.py  mycobot_280_gazebo.launch.py  mycobot_280_world.launch.py
src/mycobot_280_gazebo/scripts/: fk_mycobot_280.py  ik_point_to_point.py  ik_point_to_point_0.py  log_joint_data.py  log_joint_data_full.py  log_joint_data_fused.py  move_mycobot.py
src/mycobot_280_gazebo/urdf/: mycobot_280_gazebo.urdf
src/mycobot_280_gazebo/worlds/: empty.world
src/mycobot_control/: package.xml  pi_motion3_node.py  setup.cfg  setup.py
src/mycobot_control/launch/: mycobot_control.launch.py
src/mycobot_control/mycobot_control/: mycobot_control.py  serial_iface.py
src/mycobot_control/scripts/: fk_tool_calib.py  ik_debug.py
src/mycobot_description/: CMakeLists.txt  package.xml
src/mycobot_motion_v1/: package.xml  setup.cfg  setup.py
src/mycobot_motion_v1/mycobot_motion_v1/: motion_node.py
src/mycobot_msgs/: CMakeLists.txt  package.xml
src/mycobot_msgs/msg/: DetectedObject.msg
src/vision/: package.xml  setup.py
src/vision/vision/: vision_node.py
