<?xml version="1.0"?>
<package format="3">
  <name>mycobot_control</name>
  <version>0.0.1</version>
  <description>Unified control node for myCobot (velocity/position/ee pose).</description>

  <maintainer email="project-cobot@example.com">Project CoBOT Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
