<?xml version="1.0"?>
<package format="3">
  <name>mycobot_description</name>
  <version>0.1.0</version>
  <description>Mesh and URDF assets used by the MyCobot 280Pi simulation.</description>
  <maintainer email="project-cobot@example.com">Project CoBOT Team</maintainer>
  <license>LicenseRef-See-Attribution</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
