<?xml version="1.0"?>
<package format="3">
  <name>mycobot_msgs</name>
  <version>0.1.0</version>
  <description>Fixed-size messages for myCobot control</description>

  <maintainer email="project-cobot@example.com">Project CoBOT Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
