<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision</name>
  <version>0.0.0</version>
  <description>Vision workspace node using YOLO + PnP</description>

  <maintainer email="project-cobot@example.com">Project CoBOT Team</maintainer>
  <license>MIT</license>

  <!-- ROS 2 core -->
  <depend>rclpy</depend>

  <!-- Messages used -->
  <depend>geometry_msgs</depend>
  <depend>mycobot_msgs</depend>

  <!-- Testing -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
